// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper should match snapshot --alternative 1`] = `
<DocumentFragment>
  <div
    class="stepper-container--horizontal"
  >
    <div
      class="stepper-item-container--horizontal"
    >
      <div
        class="stepper-label-container stepper-label-container-alternative stepper-label-container-finished"
      >
        <div
          class="stepper-icon-container stepper-icon-container-active"
        >
          <span
            class="stepper-step-icon"
          >
            1
          </span>
        </div>
        <div
          class="stepper-title-container"
        >
          <p>
            Select campaign settings
          </p>
        </div>
      </div>
      <hr />
      <div
        class="stepper-label-container stepper-label-container-alternative"
      >
        <div
          class="stepper-icon-container stepper-icon-container-error"
        >
          <svg
            class="stepper-error-icon"
            fill="#BDBDBD"
            viewBox="0 0 22 19"
          >
            <path
              d="M0 19H22L11 0L0 19ZM12 16H10V14H12V16ZM12 12H10V8H12V12Z"
            />
          </svg>
        </div>
        <div
          class="stepper-title-container stepper-title-error-container"
        >
          <p>
            Create an ad group
          </p>
          <p
            class="stepper-step-optional"
          >
            Optional 
          </p>
        </div>
      </div>
      <hr />
      <div
        class="stepper-label-container stepper-label-container-alternative"
      >
        <div
          class="stepper-icon-container"
        >
          <span
            class="stepper-step-icon"
          >
            3
          </span>
        </div>
        <div
          class="stepper-title-container"
        >
          <p>
            Create an ad
          </p>
        </div>
      </div>
    </div>
    <div>
      <p>
        Step 1
      </p>
    </div>
    <div
      class="stepper-horizontal-buttons-group-container"
    >
      <div>
        <button
          class="btn btn-default stepper-back-button"
          disabled=""
        >
          Back
        </button>
      </div>
      <div>
        <button
          class="btn btn-default stepper-continue-button"
        >
          CONTINUE
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stepper should match snapshot --default 1`] = `
<DocumentFragment>
  <div
    class="stepper-container--horizontal"
  >
    <div
      class="stepper-item-container--horizontal"
    >
      <div
        class="stepper-label-container stepper-label-container-finished"
      >
        <div
          class="stepper-icon-container stepper-icon-container-active"
        >
          <span
            class="stepper-step-icon"
          >
            1
          </span>
        </div>
        <div
          class="stepper-title-container"
        >
          <p>
            Select campaign settings
          </p>
        </div>
      </div>
      <hr />
      <div
        class="stepper-label-container"
      >
        <div
          class="stepper-icon-container stepper-icon-container-error"
        >
          <svg
            class="stepper-error-icon"
            fill="#BDBDBD"
            viewBox="0 0 22 19"
          >
            <path
              d="M0 19H22L11 0L0 19ZM12 16H10V14H12V16ZM12 12H10V8H12V12Z"
            />
          </svg>
        </div>
        <div
          class="stepper-title-container stepper-title-error-container"
        >
          <p>
            Create an ad group
          </p>
          <p
            class="stepper-step-optional"
          >
            Optional 
          </p>
        </div>
      </div>
      <hr />
      <div
        class="stepper-label-container"
      >
        <div
          class="stepper-icon-container"
        >
          <span
            class="stepper-step-icon"
          >
            3
          </span>
        </div>
        <div
          class="stepper-title-container"
        >
          <p>
            Create an ad
          </p>
        </div>
      </div>
    </div>
    <div>
      <p>
        Step 1
      </p>
    </div>
    <div
      class="stepper-horizontal-buttons-group-container"
    >
      <div>
        <button
          class="btn btn-default stepper-back-button"
          disabled=""
        >
          Back
        </button>
      </div>
      <div>
        <button
          class="btn btn-default stepper-continue-button"
        >
          CONTINUE
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stepper should match snapshot --vertical 1`] = `
<DocumentFragment>
  <div
    class="stepper-container--vertical"
  >
    <div
      class="stepper-item-container stepper-label-container-finished"
    >
      <div
        class="stepper-label-container"
      >
        <div
          class="stepper-icon-container stepper-icon-container-active"
        >
          <span
            class="stepper-step-icon"
          >
            1
          </span>
        </div>
        <div
          class="stepper-title-container"
        >
          <p>
            Select campaign settings
          </p>
        </div>
      </div>
      <div
        class="stepper-description-buttons-container--vertical stepper-label-container-active"
      >
        <div
          class="stepper-description-container--vertical"
        >
          For each ad campaign that you create, you can control how much
              you're willing to spend on clicks and conversions, which networks
              and geographical locations you want your ads to show on, and more.
        </div>
        <div
          class="stepper-buttons-container--vertical"
        >
          <div>
            <button
              class="btn btn-default stepper-continue-button"
            >
              CONTINUE
            </button>
            <button
              class="btn btn-default stepper-back-button"
              disabled=""
            >
              Back
            </button>
          </div>
        </div>
      </div>
      <div
        class="stepper-item-inactive-place-holder--vertical"
      />
    </div>
    <div
      class="stepper-item-container"
    >
      <div
        class="stepper-label-container"
      >
        <div
          class="stepper-icon-container stepper-icon-container-error"
        >
          <svg
            class="stepper-error-icon"
            fill="#BDBDBD"
            viewBox="0 0 22 19"
          >
            <path
              d="M0 19H22L11 0L0 19ZM12 16H10V14H12V16ZM12 12H10V8H12V12Z"
            />
          </svg>
        </div>
        <div
          class="stepper-title-container stepper-title-error-container"
        >
          <p>
            Create an ad group
          </p>
          <p
            class="stepper-step-optional"
          >
            Optional 
          </p>
        </div>
      </div>
      <div
        class="stepper-item-inactive-place-holder--vertical"
      />
    </div>
    <div
      class="stepper-item-container"
    >
      <div
        class="stepper-label-container"
      >
        <div
          class="stepper-icon-container"
        >
          <span
            class="stepper-step-icon"
          >
            3
          </span>
        </div>
        <div
          class="stepper-title-container"
        >
          <p>
            Create an ad
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
